# type_conversion_iterator

./: CMakeLists.txt  LICENSE  README.md  conversions.hpp  converting_view.hpp  main.cpp  reference_view.hpp  type_conversion_iterator.hpp  views.hpp
include/tci/: conversions.hpp  type_conversion_iterator.hpp  views.hpp
include/tci/conversions/: get_pointer.hpp  get_pointer_to_second.hpp
test/: CMakeLists.txt  main.cpp
